Changelog 0.3.35 [20230228]:
- Add 9anime provider

Changelog 0.3.34 [20230226]:
- Fix simkl fallback

Changelog 0.3.33 [20230224]:
- Added GogoHD Dub Sources

Changelog 0.3.32 [20230224]:
- Added GogoHD Sources

Changelog 0.3.31 [20230223]:
- Fixed Setting Types

Changelog 0.3.30 [20230223]:
- Updated The News

Changelog 0.3.29 [20230223]:
- Added New Duration Setting for Intro Dialog

Changelog 0.3.28 [20230221]:
- Fix zoro subtitles not displaying correctly

Changelog 0.3.27 [20230218]:
- Changed a few default settings

Changelog 0.3.26 [20230217]:
- Add Zoro Sub sources

Changelog 0.3.25 [20230214]:
- Fixed sub and dub skin bug

Changelog 0.3.24 [20230213]:
- Fixed a few small bugs

Changelog 0.3.23 [20230212]:
- Added Special Setting "Filter Subs and Dubs"

Changelog 0.3.22 [20230211]:
- Use InfoTagVideo for Kodi 20+

Changelog 0.3.21 [20230209]:
- Added New Setting "Enable Automatic Subtitles for Dub Streams"

Changelog 0.3.20 [20230208]:
- Made dumb mistake with Next Up

Changelog 0.3.19 [20230208]:
- Subtitles turn on automatically for subs and off for dubs

Changelog 0.3.18 [20230208]:
- Fixed a small bug that is hardcoded

Changelog 0.3.17 [20230207]:
- Added New Setting "Show Changelog every update" 

Changelog 0.3.16 [20230207]:
- Fixed Preferred Audio Stream for torrents

Changelog 0.3.15 [20230206]:
- Brought back "Separate Subs and Dubs" 

Changelog 0.3.14 [20230204]:
- Improved the changelog with a news section

Changelog 0.3.13 [20230204]:
-  Clear cache, torrent cache and display changelog when addon is updated

Changelog 0.3.12 [20230204]:
- Fix lang error

Changelog 0.3.11 [20230204]:
- Fix source select not showing anime titles

Changelog 0.3.10 [20230202]:
- Added New Setting "Timeout for finding sources" for General Playback

Changelog 0.3.9 [20230202]:
- Added New Setting "Preferred Source" for Preferences
- Added New Setting "Set Delay in Seconds Before Showing Dialog" for Skip Intro Dialog
- Removed "Seperate Subs and Dubs" 