@@ -32,12 +32,13 @@
 
 	<!-- Provider -->
 	<category label="40226">
-		<setting id="provider.nyaa" type="bool" label="Nyaa Alt (For Verizon Users)" default="false" />
+		<setting id="provider.nyaa" type="bool" label="Nyaa" default="true" />
+		<setting id="provider.nyaaalt" type="bool" label="Nyaa Alt (For Verizon Users)" default="false" />
 		<setting id="provider.animix" type="bool" label="Animix" default="true" />
 		<setting id="provider.animepahe" type="bool" label="Animepahe" default="true" />
 		<setting id="provider.gogo" type="bool" label="Gogo" default="true" />
 		<setting id="provider.gogohd" type="bool" label="Gogo HD" default="true" />
-		<setting id="provider.nineanime" type="bool" label=" 9Anime" default="true" />
+		<setting id="provider.nineanime" type="bool" label="9Anime" default="true" />
 		<setting id="provider.zoro" type="bool" label="Zoro" default="true" />
 	</category>
 
